# constellation

./: .dockerignore  .env.example  AGENTS.md  CLAUDE.md  DEPLOY.md  DEPLOYED.md  Dockerfile.treasury  MIGRATION.md  README.md  docker-compose.yml  fly.toml  fly.treasury.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
agents/src/: byreal-skills.ts  client-simulator.ts  demo-consumer.ts  demo-kit.ts  elfa-skills.ts  generate-jobs.ts  mantle-skills.ts  skill-auth.ts  spawn-auditor.ts  spawn-skills.ts  types.ts  update-skill-endpoints.ts
apps/dashboard/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
apps/firm/: pyproject.toml
apps/kya/: README.md  package.json  tsconfig.json
apps/kya/src/: fixtures.ts  index.ts  scoring.ts  server.ts  types.ts
apps/kya/test/: scoring.test.ts  server.test.ts
apps/treasury/: package.json
apps/treasury/src/: deps.ts  handlers.ts  index.ts  (+2 more)
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
docs/: INTERFACES.md  PLAN.md  PROMPTS.md  demo-video-script.md
docs/handoff/: ANTIGRAVITY-settlement.md  B-demo-wallet-backfill.md  CODEX-A-dashboard-wiring.md  CODEX-C-reverify.md  CODEX-money-review.md  LISTING-fixes-before-activate.md
docs/status/: AG1.md  DOCSYNC.md  I2.md  P1.md  P2.md
docs/submission/: GROK-brutal-review.md  SUBMISSION.md  demo.md  twitter-post.md
facilitator/src/: config.ts  settler.ts  verifier.ts
indexer/src/: config.ts
sdk/: README.md  package-lock.json  package.json
sdk/src/: client.ts  constants.ts  index.ts
tools/demo/: package.json
(+24 files in other folders)
